--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <div class="fullpage__slide">
 
             <div class="title">
-              <h2 class="title__text js-letter">Cursos y <br />certificados</h2>
+              <h2 class="title__textFour js-letter">Cursos y <br />certificados</h2>
 
               <div class="border js-letter">
                 <span></span><span class="js-letter"></span>
@@ -250,7 +250,7 @@
           <div class="fullpage__slide">
 
             <div class="title">
-              <h2 class="title__textTwo js-letter">Trabajemos juntos</h2>
+              <h2 class="title__textFour js-letter">Trabajemos juntos</h2>
               <div class="border js-letter">
                 <span></span><span class="js-letter"></span>
               </div>
