--- a/src/about.html
+++ b/src/about.html
@@ -75,7 +75,7 @@
               </g>
             </svg></a>
           <p class="scrollDown">SCROLLDOWN</p>
-          <div class="titleTwo">
+          <div class="titleThree">
             <h2 class="title__text">Sobre mi</h2>
             <div class="border js-toRight"><span></span><span></span></div>
             <p class="title__leadTwo">
@@ -93,11 +93,12 @@
         <div class="who container">
           <div class="text text--top">
             <p class="heading-num">01</p>
+            <br>
             <div class="text__wrap text__wrap--top content">
               <h2 class="heading heading--top">QUIEN SOY</h2>
               <div class="who__wrap">
                 <div class="who__name">
-                  <h3 class="who__jp">Maariano Barrionuevo</h3>
+                  <h3 class="who__jp">Mariano Barrionuevo</h3>
                   <p class="who__en">Desarrollador Front-end</p>
                 </div>
                 <p class="who__text">
@@ -118,6 +119,7 @@
         <div class="passion container">
           <div class="text">
             <p class="heading-num">02</p>
+            <br>
             <div class="text__wrap content">
               <h2 class="heading">MOTIVACIÓN</h2>
             </div>
@@ -163,6 +165,7 @@
         <div class="skill-set container">
           <div class="text">
             <p class="heading-num">03</p>
+            <br>
             <div class="text__wrap content">
               <h2 class="heading">HABILIDADES</h2>
             </div>
