--- a/src/projects.html
+++ b/src/projects.html
@@ -75,7 +75,7 @@
               </g>
             </svg></a>
           <p class="scrollDown">SCROLLDOWN</p>
-          <div class="titleTwo">
+          <div class="titleThree">
             <h2 class="title__text">Proyectos</h2>
             <div class="border js-toRight"><span></span><span></span></div>
             <p class="title__leadTwo">Practicas, Sitios web</p>
@@ -89,8 +89,9 @@
       <section class="wrapper">
         <div class="text">
           <p class="heading-num">01</p>
+          <br>
           <div class="text__wrap">
-            <h2 class="heading">ADT Agente Oficial</h2>
+            <h2 class="headingTwo">ADT Agente Oficial</h2>
           </div>
         </div>
         <div class="meta" data-emergence="hidden">
@@ -106,7 +107,7 @@
         <div class="text">
           <p class="heading-num">02</p>
           <div class="text__wrap">
-            <h2 class="heading">Heptagrams Of Runes</h2>
+            <h2 class="headingTwo">Heptagrams Of Runes</h2>
           </div>
         </div>
         <div class="meta" data-emergence="hidden">
@@ -122,7 +123,7 @@
         <div class="text">
           <p class="heading-num">03</p>
           <div class="text__wrap">
-            <h2 class="heading">Aplicación del clima 2.0</h2>
+            <h2 class="headingTwo">Aplicación del clima 2.0</h2>
           </div>
         </div>
         <div class="meta" data-emergence="hidden">
