--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                   <a href="mailto:mariano3207@gmail.com">mariano3207@gmail.com</a>
                 </li>
                 <li class="js-letter">
-                  <a href="#" target="_blank">+54-351-8068143</a>
+                  <a href="tel:+5493518068143" target="_blank">+54-351-8068143</a>
                 </li>
               </ul>
 
